# amazon-description-scraper

./: .gitignore  README.rst  pyproject.toml  requirements.txt
.github/workflows/: release.yaml  test-and-deploy.yaml
src/amzsc/: __init__.py  interface.py
src/amzsc/handlers/: error_handler.py
src/amzsc/modules/: __init__.py
src/amzsc/modules/chrome_driver/: __init__.py  driver_amazon.py  driver_config.py  driver_manipulator.py
src/amzsc/modules/proxy/: __init__.py  proxy.py  proxy_request.py
src/amzsc/utils/: __init__.py  custom_types.py  file_worker.py  marketplace.py
tests/: test_file_worker.py  test_marketplace.py  test_proxy.py  test_scraper.py
