[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-description-scraper"
description = "Webscrape project to get Amazon products' descriptions"
authors = [{ name = "Ryzan Bui", email = "ryzan.b@zendom.co.uk" }]
dependencies = [
  "bs4",
  "fake-useragent",
  "requests",
  "selenium",
  "pandas",
  "python-dotenv",
]
dynamic = ["version"]
keywords = ["amazon", "scraping"]
readme = "README.rst"
requires-python = ">=3.9"

[project.urls]
Source = "https://github.com/ryzanbui02/amazon-description-scraper"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["**/__pycache__", ".venv"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
