[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-description-scraper"
description = "Webscrape project to get Amazon products' descriptions"
authors = [{ name = "Ryzan Bui", email = "ryzan.b@zendom.co.uk" }]
dependencies = [
    "bs4>=0.0.2",
    "fake-useragent>=2.2.0",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "selenium>=4.34.2",
]
dynamic = ["version"]
keywords = ["amazon", "scraping"]
readme = "README.rst"
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.12.8",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
Source = "https://github.com/ryzanbui02/amazon-description-scraper"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["**/__pycache__", ".venv"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
